crates/compiler/tests/parse_errors/module_name.elm
module 1 exposing (..)

x = 1
